--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,30 @@ textarea {
 #description.fixed {
   top: 0px; }
 
+.food {
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+  padding: 0px;
+  overflow: hidden; }
+  .food:hover .screen {
+    top: 0%; }
+  .food .screen {
+    top: -100%;
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.6);
+    height: 100%;
+    width: 100%;
+    -webkit-transition: top 0.4s ease;
+    -o-transition: top 0.4s ease;
+    transition: top 0.4s ease; }
+
+#menu-title {
+  width: 300px;
+  z-index: 5;
+  top: calc(50% - 2.5em);
+  left: calc(50% - 150px); }
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -158,6 +182,9 @@ textarea {
 .black {
   background-color: #222; }
 
+.white {
+  background-color: white; }
+
 .white-text {
   color: white; }
 
@@ -166,6 +193,9 @@ textarea {
 
 .title {
   font-size: 4em; }
+
+.subtitle {
+  font-size: 2.5em; }
 
 .medium, .navigation li {
   font-size: 1.5em; }
