--- a/css/style.scss
+++ b/css/style.scss
@@ -166,6 +166,34 @@ textarea {
     }
 }
 
+.food {
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+    padding: 0px;
+    overflow: hidden;
+    &:hover {
+        .screen {
+            top: 0%;
+        }
+    }
+    .screen {
+        top: -100%;
+        position: relative;
+        background-color: rgba(0, 0, 0, 0.6);
+        height: 100%;
+        width: 100%;
+        transition: top 0.4s ease
+    }
+}
+
+#menu-title {
+    width: 300px;
+    z-index: 5;
+    top: calc(50% - 2.5em);
+    left: calc(50% - 150px);
+}
+
 
 /* ==========================================================================
    Helper classes
@@ -211,6 +239,10 @@ textarea {
     background-color: #222;
 }
 
+.white {
+    background-color: white;
+}
+
 .white-text {
     color: white;
 }
@@ -221,6 +253,10 @@ textarea {
 
 .title {
     font-size: 4em;
+}
+
+.subtitle {
+    font-size: 2.5em;
 }
 
 .medium {
