--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,38 @@ textarea {
   top: calc(50% - 2.5em);
   left: calc(50% - 150px); }
 
+#gallery {
+  width: 100%;
+  overflow-x: hidden; }
+  #gallery .inner {
+    white-space: nowrap;
+    position: relative;
+    left: 0%;
+    -webkit-transition: left 0.8s;
+    -o-transition: left 0.8s;
+    transition: left 0.8s; }
+  #gallery .image {
+    display: inline-block;
+    margin-right: -4px;
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center; }
+
+.container .card {
+  margin-top: -200px;
+  padding: 2em;
+  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); }
+
+.card {
+  background-color: white;
+  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); }
+
+#contact {
+  margin-top: -200px; }
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -177,7 +209,12 @@ textarea {
   height: 100%; }
 
 .full-width {
-  width: 100%; }
+  width: 100%;
+  margin-bottom: 400px; }
+
+.card {
+  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); }
 
 .black {
   background-color: #222; }
@@ -188,8 +225,14 @@ textarea {
 .white-text {
   color: white; }
 
+black-text {
+  color: black; }
+
 .dancing-script {
   font-family: "Dancing Script", cursive; }
+
+.slim {
+  font-weight: 200; }
 
 .title {
   font-size: 4em; }
@@ -205,6 +248,9 @@ textarea {
 
 .row {
   margin: 0; }
+
+.top-space {
+  margin-top: 2em; }
 
 .no-margin {
   margin: 0px; }
